--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   width: 90%;
   max-width: 600px;
   height: auto;
-  min-height: 450px;
+  min-height: 500px;
   z-index: 10;
   perspective: 1000px;
 }
@@ -111,7 +111,7 @@ h2.great-vibes {
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease,
     box-shadow 0.3s ease;
-  margin-top: 25px;
+  /* margin-top: 25px; */
   letter-spacing: 0.5px;
 }
 
@@ -144,7 +144,7 @@ h2.great-vibes {
   bottom: 10px;
   right: 10px;
   z-index: 10;
-  font-size: 0.75em;
+  font-size: 1em;
   color: rgba(255, 255, 255, 0.5); /* Màu trắng mờ trên nền đỏ */
   font-family: "Roboto", sans-serif;
   text-align: right;
@@ -188,6 +188,6 @@ h2.great-vibes {
   #custom-signature {
     bottom: 5px;
     right: 5px;
-    font-size: 0.65em; /* Giảm kích thước chữ ký */
+    font-size: 0.75em; /* Giảm kích thước chữ ký */
   }
 }
